<resources>
    <string name="loading">Loading…</string>
    <string name="widget_preferences">Schedule Preferences</string>
    <string name="sort_episodes_by_upper">SORT EPISODES BY…</string>
    <string name="episodes_to_show_upper">EPISODES TO SHOW</string>
    <string name="series_to_show_upper">SERIES TO SHOW</string>
    <string name="sort_by_format" formatted="false">Sort %s by…</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="unavailable_date">UNAVAILABLE DATE</string>
    <string name="unavailable_status">UNAVAILABLE STATUS</string>
    <string name="unavailable_air_info">UNAVAILABLE AIR INFORMATION</string>
    <string name="unavailable_runtime">UNAVAILABLE RUNTIME</string>
    <string name="episodes">episodes</string>
    <string name="showSpecialEpisodes">Show special episodes</string>
    <string name="seriesToShow">Series to show</string>
    <string name="seriesToCount">Series to count</string>
    <string name="episodesToShow">Episodes to show</string>
    <string name="episodesToCount">Episodes to count</string>
    <string name="showAll">Show all</string>
    <string name="showSelected">Show selected</string>
    <string name="countAll">Count all</string>
    <string name="countSelected">Count selected</string>
    <string name="series_to_remove">Series to remove</string>
    <string name="remove_all">Remove all</string>
    <string name="remove_selected">Remove selected</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cannot_be_undone">This removal cannot be undone.</string>
    <string name="no_series_selected_to_remove">No series selected to remove.</string>
    <string name="no_series_to_remove">No series to remove.</string>
    <string name="no_series_to_filter">No series to filter.</string>
    <string name="no_series_to_show">No series to show</string>
    <string name="no_series_to_sort">No series to sort.</string>
    <string name="no_episodes_to_sort">No episodes to sort.</string>
    <string name="no_episodes_to_show">No episodes to show.</string>
    <string name="no_episodes_to_count">No episodes to count.</string>
    <string name="no_seasons_to_sort">No seasons to sort.</string>
    <string name="add_success">%s successfully added.</string>
    <string name="relative_time_today">Today</string>
    <string name="relative_time_tomorrow">Tomorrow</string>
    <string name="relative_time_yesterday">Yesterday</string>
    <string name="relative_time_past">%d days ago</string>
    <string name="relative_time_future">In %d days</string>
    <string name="status_continuing">Continuing</string>
    <string name="status_ended">Ended</string>
    <string name="number_of_results_for_search_by_name" formatted="false">%d series found</string>
    <string name="trending">TRENDING</string>
    <string name="powered_by_trakt">Powered by Trakt.tv</string>
    <string name="number_of_results_for_search_by_trending">%d series being watched right now</string>
    <string name="action_hide_single_series">Hide series</string>
    <string name="action_remove_single_series">Remove series</string>
    <string name="series">series</string>
    <string name="all_seasons">All seasons</string>
    <string name="tab_overview">OVERVIEW</string>
    <string name="tab_seasons">SEASONS</string>
    <string name="tab_next_to_watch">NEXT TO WATCH</string>
    <string name="tab_aired">AIRED</string>
    <string name="tab_unaired">UNAIRED</string>
    <string name="confirmation_removal_single_series">Do you really want to remove %s?</string>
    <string name="title_no_scheduled_episodes">No scheduled episodes</string>
    <string name="warning_hidden_episodes">BUT SOME ARE HIDDEN</string>
    <string name="button_unhide_special_episodes">Show special episodes</string>
    <string name="button_unhide_watched_episodes">Show watched episodes</string>
    <string name="button_unhide_episodes_of_some_series">Unhide episodes of some series</string>
    <plurals name="plural_remaining">
        <item quantity="one">%d remaining</item>
        <item quantity="other">%d remaining</item>
    </plurals>
    <plurals name="plural_unaired">
        <item quantity="one">unaired</item>
        <item quantity="other">unaired</item>
    </plurals>
    <string name="all_aired">All aired</string>
    <plurals name="plural_special">
        <item quantity="one">%d special</item>
        <item quantity="other">%d specials</item>
    </plurals>
    <string name="none_special">No specials</string>
    <plurals name="plural_there_are_hidden_series">
        <item quantity="one">BUT THERE IS %d HIDDEN SERIES</item>
        <item quantity="other">BUT THERE ARE %d HIDDEN SERIES</item>
    </plurals>
    <string name="btn_add_series">Add some series</string>
    <string name="btn_unhide_series">Unhide some series</string>
    <string name="description_poster">Series poster</string>
    <string name="description_clear_button">Clear button</string>
    <string name="description_search_button">Search button</string>
    <string name="description_home_button">Home button</string>
    <string name="description_schedule_button">Schedule button</string>
    <string name="description_preferences_button">Preferences button</string>
    <string name="nav_library">Library</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_statistics">Statistics</string>
    <string name="nav_features">Features</string>
    <string name="sidemenu_accessibility_open">Open navigation drawer</string>
    <string name="sidemenu_accessibility_close">Close navigation drawer</string>
    <string name="actors">ACTORS</string>
    <string name="details">Details</string>
    <string name="directors">DIRECTORS</string>
    <string name="guest_stars">GUEST STARS</string>
    <string name="ab_title_schedule">Schedule</string>
    <string name="ab_title_library">Library</string>
    <string name="ab_title_statistics">Statistics</string>
    <string name="ab_title_features">Features</string>
    <string name="no">No</string>
    <string name="no_episodes_to_see">No episodes to see.</string>
    <string name="ok">OK</string>
    <string name="overview">OVERVIEW</string>
    <string name="overview_unavailable">Overview is unavailable.</string>
    <string name="powered_by_thetvdb">Powered by TheTVDB.com</string>
    <string name="add_series">Add Series</string>
    <string name="search">SEARCH</string>
    <string name="seasons">Seasons</string>
    <string name="series_name">Series name</string>
    <string name="to_be_announced">To be announced</string>
    <string name="writers">WRITERS</string>
    <string name="yes">Yes</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="dismiss">Dismiss</string>
    <string name="date_format">yyyy-MM-dd</string>
    <string name="number_format_episode_full" formatted="false">SEASON %d EPISODE %d</string>
    <string name="number_format_episode_full_special" formatted="false">SPECIAL EPISODE %d</string>
    <string name="episode_number_format_ext" formatted="false">EPISODE %d</string>
    <string name="episode_number_format" formatted="false">S%02dE%02d</string>
    <string name="runtime_minutes_format" formatted="false">%s minutes</string>
    <string name="special_episodes">SPECIAL EPISODES</string>
    <string name="season_number_format_ext" formatted="false">SEASON %d</string>
    <string name="connection_failed_title">Couldn\'t connect to Trakt.tv</string>
    <string name="connection_failed_message">Check your Internet connection and try again.</string>
    <string name="network_unavailable_title">Not connected to the Internet</string>
    <string name="network_unavailable_message">Check your connection and try again.</string>
    <string name="parsing_failed_title">Couldn\'t connect to Trakt.tv</string>
    <string name="parsing_failed_message">Check your Internet connection and try again.</string>
    <string name="invalid_criteria_title">Invalid series name</string>
    <string name="invalid_criteria_message">Type at least one word.</string>
    <string name="follow_toast_message_format" formatted="false">The series %s will be added to your list soon.</string>
    <string name="btn_try_again">Try again</string>
    <string name="add_already_followed_series_message">You already follow \'%s\'.</string>
    <string name="add_failed_title">Adding failed</string>
    <string name="add_connection_failed_message">The connection has failed while adding %s. Check your connection and try again.</string>
    <string name="add_series_not_found">The database has returned "series not found" while adding %s. Check your connection and configurations then try again.</string>
    <string name="updates">Updates</string>
    <string name="no_series_to_update">No series to update</string>
    <string name="update_timeout">Update time limit exceeded</string>
    <string name="checking_for_updates_message">Checking for updates…</string>
    <string name="update_progress_message">Updating \"%s\"…</string>
    <string name="update_success_message">Update succeeded.</string>
    <string name="update_failed_with_cause">Update failed: %s</string>
    <string name="update_failed_without_cause">Update failed.</string>
    <string name="update_single_series_failed_with_cause">Failed updating \"%1$s\": %2$s</string>
    <string name="update_single_series_failed_without_cause">Failed updating \"%s\".</string>
    <string name="update_many_series_failed_with_cause">Failed updating %1$d series: %2$s</string>
    <string name="update_many_series_failed_without_cause">Failed updating %d series.</string>
    <string name="latest_successful_update">Latest successful update on %1$s at %2$s</string>
    <string name="update_status">UPDATE STATUS</string>
    <string name="update_not_running">Not running.</string>
    <string name="update_now">Update now</string>
    <string name="update_data_automatically">RUN AUTOMATIC UPDATES…</string>
    <string name="update_on_wifi">Only when connected to Wi-Fi</string>
    <string name="update_on_wifi_or_data_plan">When any connection is available</string>
    <string name="do_not_update">Never (not recommended)</string>
    <string name="features_screenshots_not_available">Screenshots are not available for this feature.</string>
    <string name="features_loading_products_with_availability_error_message">Failed to communicate with Google Play™. Please, check your Internet connection.</string>
    <string name="features_no_products_available">No premium features available</string>
    <string name="features_watch_out_for_new_products">Watch out for upcoming features!</string>
    <string name="features_price_not_available">N/A</string>
    <string name="features_price_purchased">PURCHASED</string>
    <string name="purchase_feature">purchase \"%s\" on feature shop</string>
    <string name="cloud_backup">Cloud backup</string>
    <string name="backup_restore">Backup/Restore</string>
        <string name="series_uppercase">SERIES</string>
        <string name="seasons_uppercase">SEASONS</string>
        <string name="episodes_uppercase">EPISODES</string>
        <string name="total_runtime_uppercase">TOTAL RUNTIME</string>
        <plurals name="series_watched">
            <item quantity="one">%d WATCHED</item>
            <item quantity="other">%d WATCHED</item>
        </plurals>
        <plurals name="seasons_watched">
            <item quantity="one">%d WATCHED</item>
            <item quantity="other">%d WATCHED</item>
        </plurals>
        <plurals name="episodes_watched">
            <item quantity="one">%d WATCHED</item>
            <item quantity="other">%d WATCHED</item>
        </plurals>
        <string name="watched_runtime_format" formatted="false" >%dh%dmin WATCHED</string>
</resources>