<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/actionBar"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/appwidget_actionbar_height">

    <ImageButton
        android:id="@+id/homeButton"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/description_home_button"
        android:scaleType="centerInside"
        android:background="@drawable/item_background_holo_dark"
        android:padding="@dimen/gap_medium"
        android:layout_width="@dimen/appwidget_actionbar_homebutton_width"
        android:layout_height="@dimen/appwidget_actionbar_button_height"/>

    <TextView
        android:id="@+id/titleView"
        android:text="@string/ab_title_schedule"
        style="@style/TextView.Large.White.Ellipsized"
        android:fontFamily="sans-serif-light"
        android:gravity="center_vertical|left"
        android:layout_width="0dp"
        android:layout_height="@dimen/appwidget_actionbar_button_height"
        android:layout_weight="1"/>

    <ImageButton
        android:id="@+id/scheduleButton"
        android:src="@drawable/actionbar_calendar"
        android:contentDescription="@string/description_schedule_button"
        android:scaleType="centerInside"
        android:background="@drawable/item_background_holo_dark"
        android:padding="@dimen/gap_medium"
        android:layout_width="@dimen/appwidget_actionbar_button_width"
        android:layout_height="@dimen/appwidget_actionbar_button_height"/>

    <ImageButton
        android:id="@+id/preferencesButton"
        android:src="@drawable/actionbar_settings"
        android:contentDescription="@string/description_preferences_button"
        android:scaleType="centerInside"
        android:background="@drawable/item_background_holo_dark"
        android:padding="@dimen/gap_medium"
        android:layout_width="@dimen/appwidget_actionbar_button_width"
        android:layout_height="@dimen/appwidget_actionbar_button_height"/>

</LinearLayout>