<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/empty_state"
    android:orientation="vertical"
    android:paddingTop="@dimen/gap_medium"
    android:paddingBottom="@dimen/gap_medium"
    android:paddingLeft="@dimen/gap_large"
    android:paddingRight="@dimen/gap_large"
    android:layout_width="@dimen/empty_state_view_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/title"
        android:text="@string/title_no_scheduled_episodes"
        style="@style/TextView.XLarge.DarkGray"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/hiddenEpisodes"
        android:text="@string/warning_hidden_episodes"
        android:textSize="@dimen/text_size_xmedium"
        android:textColor="@color/yellow"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="@dimen/empty_state_internal_gap_top"
        android:layout_marginBottom="@dimen/empty_state_internal_gap_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/unhideSpecialEpisodes"
        android:text="@string/button_unhide_special_episodes"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/text_dark_gray"
        android:drawableLeft="@drawable/ic_action_filter_inverse"
        android:drawablePadding="@dimen/gap_medium"
        android:gravity="left|center_vertical"
        android:paddingRight="@dimen/gap_medium"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/unhideWatchedEpisodes"
        android:text="@string/button_unhide_watched_episodes"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/text_dark_gray"
        android:drawableLeft="@drawable/ic_action_filter_inverse"
        android:drawablePadding="@dimen/gap_medium"
        android:gravity="left|center_vertical"
        android:paddingRight="@dimen/gap_medium"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/unhideEpisodesOfSomeSeries"
        android:text="@string/button_unhide_episodes_of_some_series"
        android:textSize="@dimen/text_size_medium"
        android:textColor="@color/text_dark_gray"
        android:drawableLeft="@drawable/ic_action_filter_inverse"
        android:drawablePadding="@dimen/gap_medium"
        android:gravity="left|center_vertical"
        android:paddingRight="@dimen/gap_medium"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="@dimen/gap_micro"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>