<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <!-- SERIES -->

        <TextView
            android:id="@+id/numberOfSeries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/gap_large"
            android:text="1"
            android:textSize="@dimen/text_size_extreme" />

        <TextView
            android:id="@+id/series"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/series_uppercase"
            android:textSize="@dimen/text_size_medium" />

        <ProgressBar
            android:id="@+id/seriesWatchedProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/gap_large"
            android:layout_marginRight="@dimen/gap_large" />

        <TextView
            android:id="@+id/seriesWatched"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/series_watched"
            android:textSize="@dimen/text_size_medium" />

        <!-- SEASONS -->

        <TextView
            android:id="@+id/numberOfSeasons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/gap_large"
            android:text="1"
            android:textSize="@dimen/text_size_extreme" />

        <TextView
            android:id="@+id/seasons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/seasons_uppercase"
            android:textSize="@dimen/text_size_medium" />

        <ProgressBar
            android:id="@+id/seasonsWatchedProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/gap_large"
            android:layout_marginRight="@dimen/gap_large" />

        <TextView
            android:id="@+id/seasonsWatched"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/seasons_watched"
            android:textSize="@dimen/text_size_medium" />

        <!-- EPISODES -->

        <TextView
            android:id="@+id/numberOfEpisodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/gap_large"
            android:text="1"
            android:textSize="@dimen/text_size_extreme" />

        <TextView
            android:id="@+id/episodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/episodes_uppercase"
            android:textSize="@dimen/text_size_medium" />

        <ProgressBar
            android:id="@+id/episodesWatchedProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/gap_large"
            android:layout_marginRight="@dimen/gap_large" />

        <TextView
            android:id="@+id/episodesWatched"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/episodes_watched"
            android:textSize="@dimen/text_size_medium" />

        <!-- HOURS -->

        <TextView
            android:id="@+id/watchedRuntime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/gap_large"
            android:text="@string/total_runtime_format"
            android:textSize="@dimen/text_size_xlarge" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/total_runtime"
            android:textSize="@dimen/text_size_medium" />
    </LinearLayout>

</RelativeLayout>